change margin-bottom to avoid too large space between two social buttons

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -370,8 +370,7 @@ ul.banner-social-buttons {
 @media(max-width:767px) {
     ul.banner-social-buttons li {
         display: block;
-        margin-top: 0px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         padding: 0;
     }
 
